# sqpack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-audit.yaml  rust.yml
src/: archive_id.rs  error.rs  lib.rs  package.rs  raw_file.rs  reference.rs  util.rs
src/sqpack_reader/: archive.rs  data.rs  index.rs  mod.rs
src/std/: archive.rs  archive_container.rs  data.rs  definition.rs  file.rs  index.rs  mod.rs
tests/: read_test.rs
