[package]
name = "sqpack"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
test_local = ["std"]
default = ["std"]
std = ["crc32fast/std", "tokio"]

[dependencies]
cfg-if = { version = "^1.0", default-features = false }
futures = {version = "^0.3", features = ["alloc"], default-features = false }
crc32fast = { version = "^1.2", default-features = false }
miniz_oxide = { version = "^0.5", default-features = false }
log = { version = "^0.4", default-features = false }
async-trait = { version = "^0.1", default-features = false }
bytes = { version = "^1.0", default-features = false }

tokio = { version = "^1.0", features = ["sync", "fs", "rt"], optional = true }

[dev-dependencies]
pretty_env_logger = { version = "^0.4" }
tokio = { version = "^1.0", features = ["macros", "rt"] }
